<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>turtlebot3_manipulation_controller</name>
  <version>2.0.1</version>
  <description>
    ROS 2 package for turtlebot3_manipulation_controller
  </description>
  <license>Apache 2.0</license>
  <author email="jhshim@robotis.com">Ryan Shim</author>
  <author email="thlim@robotis.com">Darby Lim</author>
  <maintainer email="pyo@robotis.com">Pyo</maintainer>
  <url type="website">http://wiki.ros.org/open_manipulator_with_tb3_tools</url>
  <url type="emanual">http://emanual.robotis.com/docs/en/platform/turtlebot3/manipulation</url>
  <url type="repository">https://github.com/ROBOTIS-GIT/open_manipulator_with_tb3</url>
  <url type="bugtracker">https://github.com/ROBOTIS-GIT/open_manipulator_with_tb3/issues</url>
  <depend>ament_cmake</depend>
  <depend>ar_track_alvar_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>open_manipulator_msgs</depend>
  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>smach</depend>
  <depend>smach_ros</depend>
  <depend>std_msgs</depend>
  <depend>trajectory_msgs</depend>
  <exec_depend>amcl</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>map_server</exec_depend>
  <exec_depend>move_base</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
